--- a/day10/Day10Study/MyPortfolioWebApp/MyPortfolioWebApp.csproj
+++ b/day10/Day10Study/MyPortfolioWebApp/MyPortfolioWebApp.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="BackupModels\**" />
+    <Content Remove="BackupModels\**" />
+    <EmbeddedResource Remove="BackupModels\**" />
+    <None Remove="BackupModels\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.3" />
@@ -20,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="BackupModels\" />
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\upload\" />
   </ItemGroup>
 
 </Project>
